[package]
name = "updddin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
http = "0.2.9"
include_dir = "0.7.3"
log = "0.4.20"
mime_guess = "2.0.4"
rand = "0.8.5"
rust_decimal = "1.32.0"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
