[package]
name = "updddin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
axum-extra = { version = "0.8.0", features = ["cookie", "multipart"] }
bb8 = "0.8.1"
bb8-redis = "0.13.1"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
include_dir = "0.7.3"
log = "0.4.20"
mime_guess = "2.0.4"
mongodb = "2.7.1"
multipart = "0.18.0"
once_cell = "1.18.0"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp", "tls", "tokio-native-tls", "tokio-native-tls-comp"] }
reqwest = { version = "0.11.22", features = ["serde_json", "tokio-rustls", "tokio-socks", "tokio-util", "json", "multipart"] }
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
rust_decimal = "1.32.0"
scylla = "0.10.1"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde_with = "3.3.0"
tokio = { version = "1.32.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.6.1", features = ["v4"] }

